For SD and Implementation

--- a/literature.bib
+++ b/literature.bib
@@ -12,14 +12,144 @@ keywords = {Digital Twin, Business process, Internet of Things},
 abstract = {Modern organizations necessitate continuous business processes improvement to maintain efficiency, adaptability, and competitiveness. In the last few years, the Internet of Things, via the deployment of sensors and actuators, has heavily been adopted in organizational and industrial settings to monitor and automatize physical processes influencing and enhancing how people and organizations work. Such advancements are now pushed forward by the rise of the Digital Twin paradigm applied to organizational processes. Advanced ways of managing and maintaining business processes come within reach as there is a Digital Twin of a business process - a virtual replica with real-time capabilities of a real process occurring in an organization. Combining business process models with real-time data and simulation capabilities promises to provide a new way to guide day-to-day organization activities. However, integrating Digital Twins and business processes is a non-trivial task, presenting numerous challenges and ambiguities. This manifesto paper aims to contribute to the current state of the art by clarifying the relationship between business processes and Digital Twins, identifying ongoing research and open challenges, thereby shedding light on and driving future exploration of this innovative interplay.}
 }
 
-@Book{oxfordai,
-    publisher = {Oxford University Press},
-    author = {{Oxford University Press}},
-    editor = {James Murray},
-    title = {{Oxford English Dictionary}},
-    year = {2018},
-    month = {12},
+@ARTICLE{10716255,
+  author={Vitale, Francesco and Guarino, Simone and Flammini, Francesco and Faramondi, Luca and Mazzocca, Nicola and Setola, Roberto},
+  journal={IEEE Transactions on Industrial Informatics}, 
+  title={Process Mining for Digital Twin Development of Industrial Cyber-Physical Systems}, 
+  year={2025},
+  volume={21},
+  number={1},
+  pages={866-875},
+  keywords={Petri nets;Monitoring;Mathematical models;Digital twins;Analytical models;Power system dynamics;Vehicle dynamics;Data models;Measurement;Anomaly detection;Conformance checking (CC);event logs;modeling;monitoring;process discovery (PD);simulation;water distribution testbed (WDT)},
+  doi={10.1109/TII.2024.3465600}
 }
+
+@INPROCEEDINGS{8622412,
+  author={Stojanovic, Nenad and Milenovic, Dejan},
+  booktitle={2018 IEEE International Conference on Big Data (Big Data)}, 
+  title={Data-driven Digital Twin approach for process optimization: an industry use case}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={4202-4211},
+  keywords={Process control;Big Data;Data models;Laser beam cutting;Monitoring;Production;Manufacturing;industry data analytics;data twin;process optimization},
+  doi={10.1109/BigData.2018.8622412}
+}
+
+@article{WALTON2024110241,
+title = {A unified digital twin approach incorporating virtual, physical, and prescriptive analytical components to support adaptive real-time decision-making},
+journal = {Computers & Industrial Engineering},
+volume = {193},
+pages = {110241},
+year = {2024},
+issn = {0360-8352},
+doi = {https://doi.org/10.1016/j.cie.2024.110241},
+url = {https://www.sciencedirect.com/science/article/pii/S0360835224003620},
+author = {Ryan B. Walton and Frank W. Ciarallo and Lance E. Champagne},
+keywords = {Digital twin, Simulation, Augmented/virtual reality, Real-time decision-making},
+abstract = {Based on an overview of the historical and rapidly expanding literature on digital twins, this paper identifies fundamental capabilities that outline a general and adaptable twin that supports system development, real-time interactions, prescribing courses of action, and actualizing them. We relate these capabilities to business analytics concepts and decision-making processes geared toward rapid adaptation to changing situations. This leads to a general digital twin architecture supporting a system throughout its lifecycle implemented with components including Internet of Things (IoT) devices, a virtual reality environment, network communications, and an analytic simulation. The success of this architecture revolves around an authoritative data source, the Highly Integrated Virtual Environment (HIVE). We demonstrate the architecture and capabilities through a transporter system example. This demonstration highlights important timing and synchronization questions critical to fulfilling the twin’s fundamental role of reacting to evolving real-world conditions. It identifies the importance of lags in decisions, relates it to prescriptive response time and the rate of evolution of the underlying system, and quantifies this impact with new metrics of effectiveness lag and relevancy decay.}
+}
+
+% ---------- Cotton Candy Research
+
+@article{labuza,
+author = {Labuza, Theodore and Labuza, Peter},
+year = {2004},
+month = {12},
+pages = {274 - 287},
+title = {Influence of temperature and relative humidity on the physical states of cotton candy},
+volume = {28},
+journal = {Journal of Food Processing and Preservation},
+doi = {10.1111/j.1745-4549.2004.24041.x}
+}
+
+@article{TERASHIMA2022139953,
+title = {Thermal study on cotton candy by differential scanning calorimetry},
+journal = {Chemical Physics Letters},
+volume = {805},
+pages = {139953},
+year = {2022},
+issn = {0009-2614},
+doi = {https://doi.org/10.1016/j.cplett.2022.139953},
+url = {https://www.sciencedirect.com/science/article/pii/S0009261422006121},
+author = {Yukio Terashima},
+keywords = {Cotton candy, Sucrose, Amorphous, Crystalline, Differential scanning calorimetry},
+abstract = {Cotton candy is a confection made by solidifying melted sugar into fibers. Differential scanning calorimetry (DSC) was performed for two kinds of cotton candy made in an air (CCA) and in a nitrogen gas (CCN) and for crystalline sucrose (CS) and its quenched melt as amorphous sucrose (AS). The CCA was mainly crystalline with a small amorphous part and easily degraded by aging. The CCN exhibited a more glassy structure, and its aging behavior was different from that of the CCA. Gas conditions in cooking were found to be crucial to the physical state and thermal stability of cotton candy.}
+}
+
+@article{KOKUBO2025101168,
+title = {Gelatin Cotton Candy: A model study to create functional fiber foods},
+journal = {International Journal of Gastronomy and Food Science},
+volume = {40},
+pages = {101168},
+year = {2025},
+issn = {1878-450X},
+doi = {https://doi.org/10.1016/j.ijgfs.2025.101168},
+url = {https://www.sciencedirect.com/science/article/pii/S1878450X25000691},
+author = {Miho Kokubo and Takuto Shimizu and Tomohiro Masu and Shuji Fujii},
+keywords = {Cotton Candy, Gelatin, Gastronomy, Transformation, Fiber, Gelation},
+abstract = {Unique texture of cotton candy and rapid melting behavior make it a compelling model for exploring transformative food technologies. In this study, we develop a fundamental method for producing cotton candy-like fibers using gelatin solutions for innovative food design. Gelatin solutions were processed under controlled conditions using a modified cotton candy machine, and the effects of additives such as acids (acetic and citric acid) and sucrose on fiber formation were investigated. The results demonstrated that the fiber thickness could be controlled by adjusting the solution viscosity. Acids reduced viscosity, yielding softer and thinner fibers, while sucrose in-creased viscosity, resulting in thicker and firmer fibers. A scaling law de-scribing the relationship between fiber thickness and solution viscosity was validated. This study provides insights into designing fiber food textures with tailored physico-chemical properties, leading to applications in functional foods, molecular gastronomy, and personalized nutrition.}
+}
+
+% ----- These are books or the standard in Digital Twins
+@article{KREUZER2024102304,
+title = {Artificial intelligence in digital twins—A systematic literature review},
+journal = {Data & Knowledge Engineering},
+volume = {151},
+pages = {102304},
+year = {2024},
+issn = {0169-023X},
+doi = {https://doi.org/10.1016/j.datak.2024.102304},
+url = {https://www.sciencedirect.com/science/article/pii/S0169023X24000284},
+author = {Tim Kreuzer and Panagiotis Papapetrou and Jelena Zdravkovic},
+keywords = {Artificial intelligence, Digital twin, Machine learning, Literature review, Business intelligence, Data mining},
+abstract = {Artificial intelligence and digital twins have become more popular in recent years and have seen usage across different application domains for various scenarios. This study reviews the literature at the intersection of the two fields, where digital twins integrate an artificial intelligence component. We follow a systematic literature review approach, analyzing a total of 149 related studies. In the assessed literature, a variety of problems are approached with an artificial intelligence-integrated digital twin, demonstrating its applicability across different fields. Our findings indicate that there is a lack of in-depth modeling approaches regarding the digital twin, while many articles focus on the implementation and testing of the artificial intelligence component. The majority of publications do not demonstrate a virtual-to-physical connection between the digital twin and the real-world system. Further, only a small portion of studies base their digital twin on real-time data from a physical system, implementing a physical-to-virtual connection.}
+}
+
+@Inbook{Gupta2025,
+author="Gupta, Sunil
+and Iyer, Ravi S.
+and Kumar, Sanjeev",
+title="Digital Twin Challenges",
+bookTitle="Digital Twins: Advancements in Theory, Implementation, and Applications",
+year="2025",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="19--42",
+abstract="The use cases of digital twins have been game changers in some industries because they offer practically amazing and insightful benefits. Digital twins are not easy to set up. The list of various challenges to be addressed in the implementation of digital twins is long, ranging from severe security and privacy concerns over quality problems during data acquisition to technical problems. This chapter would also unveil the issue of securing sensitive information with regard to the digital twin related to data security and privacy. The quality of data should thereby be ascertained for the efficiency of working with digital twin applications. These recommendations on how to strengthen the digital twin ecosystem make a world where breaches in security and privacy become quite risky. In this chapter, we consider ways and whiskers: causes of poor-quality data, mostly focusing on sensor errors or device failures in general, which beget failures and anomalies of data. Finally, it explains the methods through which validation, cleansing, and calibration techniques may be applied toward improving the dependability of the data set as a whole by minimizing the errors that resulted because of various mechanisms in the process of the creation or transfer of data. Technically-bound hurdles Technical hindrances constitute the third dimension of issues. The digital twins' flawless operation is often prevented by integration issues and problems of scaling.",
+isbn="978-3-031-76564-3",
+doi="10.1007/978-3-031-76564-3_2",
+url="https://doi.org/10.1007/978-3-031-76564-3_2"
+}
+
+@article{VANDERHORN2021113524,
+title = {Digital Twin: Generalization, characterization and implementation},
+journal = {Decision Support Systems},
+volume = {145},
+pages = {113524},
+year = {2021},
+issn = {0167-9236},
+doi = {https://doi.org/10.1016/j.dss.2021.113524},
+url = {https://www.sciencedirect.com/science/article/pii/S0167923621000348},
+author = {Eric VanDerHorn and Sankaran Mahadevan},
+keywords = {Digital Twin, Decision making, Virtual representation, Model updating, Information fusion},
+abstract = {Digital Twin is one of the promising digital technologies being developed at present to support digital transformation and decision making in multiple industries. While the concept of a Digital Twin is nearly 20 years old, it continues to evolve as it expands to new industries and use cases. This has resulted in a continually increasing variety of definitions that threatens to dilute the concept and lead to ineffective implementations of the technology. There is a need for a consolidated and generalized definition, with clearly established characteristics to distinguish what constitutes a Digital Twin and what does not. This paper reviews 46 Digital Twin definitions given in the literature over the past ten years to propose a generalized definition that encompasses the breadth of options available and provides a detailed characterization which includes criteria to distinguish the Digital Twin from other digital technologies. Next, a process and considerations for the implementation of Digital Twins is presented through a case study. Digital Twin future needs and opportunities are also outlined.}
+}
+
+@article{PERNO2022103558,
+title = {Implementation of digital twins in the process industry: A systematic literature review of enablers and barriers},
+journal = {Computers in Industry},
+volume = {134},
+pages = {103558},
+year = {2022},
+issn = {0166-3615},
+doi = {https://doi.org/10.1016/j.compind.2021.103558},
+url = {https://www.sciencedirect.com/science/article/pii/S0166361521001652},
+author = {Matteo Perno and Lars Hvam and Anders Haug},
+keywords = {Digital twin, Simulation, Process industry, Literature review, Barrier, Enabler},
+abstract = {Since the introduction of the concept of “digital twins” (DTs) in 2002, the number of practical applications in different industrial sectors has grown rapidly. Despite the hype surrounding this technology, companies face significant challenges upon deciding to implement DTs in their organizations due to the novelty of the concept. Furthermore, little research on DT has been conducted for the process industry, which may be explained by the high complexity of accurately representing and modeling the physics behind production processes. To consolidate the fragmented literature on the enabling factors and challenges in DT implementation in the process industry, this study organizes the existing studies on DTs with a focus on barriers and enablers. On this basis, this study contributes to the existing body of knowledge on DTs by organizing the DT literature and by proposing conceptual models describing enablers of and barriers to DT implementation, as well as their mutual relationships.}
+}
+
 @article{Hevner2004,
   author       = {Hevner, Alan R. and March, Salvatore T. and Park, Jinsoo and Ram, Sudha},
   title        = {Design Science in Information Systems Research},
@@ -29,17 +159,6 @@ abstract = {Modern organizations necessitate continuous business processes impro
   pages        = {75--105},
   year         = {2004},
   doi          = {10.2307/25148625},
-}
-
-@article{article,
-author = {Labuza, Theodore and Labuza, Peter},
-year = {2004},
-month = {12},
-pages = {274 - 287},
-title = {Influence of temperature and relative humidity on the physical states of cotton candy},
-volume = {28},
-journal = {Journal of Food Processing and Preservation},
-doi = {10.1111/j.1745-4549.2004.24041.x}
 }
 
 @book{Zaki2020,
@@ -52,3 +171,13 @@ doi = {10.1111/j.1745-4549.2004.24041.x}
   month     = {March}
 }
 
+@INPROCEEDINGS{11015088,
+  author={Giussani, Samuele and Perez-Palacin, Diego and Caporuscio, Mauro and Edrisi, Farid},
+  booktitle={2025 IEEE 22nd International Conference on Software Architecture Companion (ICSA-C)}, 
+  title={Business Process Lifecycle Enhancement via Digital Twin and Model-Driven Engineering}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={300-309},
+  keywords={Analytical models;Uncertainty;Software architecture;Organizations;Transforms;Reliability engineering;Model driven engineering;Digital twins;Software reliability;Manufacturing},
+  doi={10.1109/ICSA-C65153.2025.00050}}
