--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,9 @@
 \documentclass[oneside]{tum-book}
 
 \usepackage{subcaption}
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta,positioning,fit,shapes,calc}
+
 
 \title{Cotton Candy Digital Twin: Prescriptive Creation of Digital Twins}
 \germantitle{Titel der Abschlussarbeit}
