Go Back to Overleaf

--- a/literature.bib
+++ b/literature.bib
@@ -181,3 +181,13 @@ abstract = {Since the introduction of the concept of “digital twins” (DTs) i
   pages={300-309},
   keywords={Analytical models;Uncertainty;Software architecture;Organizations;Transforms;Reliability engineering;Model driven engineering;Digital twins;Software reliability;Manufacturing},
   doi={10.1109/ICSA-C65153.2025.00050}}
+
+
+%----------- Sensors Documentation
+@misc{waveshareIRsensor,
+  author       = {{Waveshare}},
+  title        = {Infrared Temperature Sensor - User Manual},
+  howpublished = {\url{https://www.waveshare.com/wiki/Infrared_Temperature_Sensor}},
+  note         = {Accessed: 2025-01-14},
+  year         = {2025}
+}
