--- a/literature.bib
+++ b/literature.bib
@@ -38,7 +38,7 @@ abstract = {Modern organizations necessitate continuous business processes impro
 
 @article{WALTON2024110241,
 title = {A unified digital twin approach incorporating virtual, physical, and prescriptive analytical components to support adaptive real-time decision-making},
-journal = {Computers & Industrial Engineering},
+journal = {Computers \& Industrial Engineering},
 volume = {193},
 pages = {110241},
 year = {2024},
@@ -94,7 +94,7 @@ abstract = {Unique texture of cotton candy and rapid melting behavior make it a 
 % ----- These are books or the standard in Digital Twins
 @article{KREUZER2024102304,
 title = {Artificial intelligence in digital twins—A systematic literature review},
-journal = {Data & Knowledge Engineering},
+journal = {Data \& Knowledge Engineering},
 volume = {151},
 pages = {102304},
 year = {2024},
@@ -183,11 +183,42 @@ abstract = {Since the introduction of the concept of “digital twins” (DTs) i
   doi={10.1109/ICSA-C65153.2025.00050}}
 
 
-%----------- Sensors Documentation
+%----------- System Documentation
+@manual{ccmachine-manual,
+  title        = {User Manual: Cotton Candy Machine RCZK-1030-W},
+  author       = {{Royal Catering}},
+  year         = {2023},
+  url          = {https://manuals.expondo.com/10010549},
+  note         = {Accessed: 2025-09-02}
+}
+
+@manual{ur5e-manual,
+  title        = {UR5e Robot Arm: User Manual},
+  author       = {{Universal Robots}},
+  year         = {2022},
+  url          = {https://www.universal-robots.com/manuals/EN/HTML/SW5_22/Content/Landingpages/Web/LandingarmUR5e.htm},
+  note         = {Accessed: 2025-09-02}
+}
 @misc{waveshareIRsensor,
   author       = {{Waveshare}},
   title        = {Infrared Temperature Sensor - User Manual},
   howpublished = {\url{https://www.waveshare.com/wiki/Infrared_Temperature_Sensor}},
   note         = {Accessed: 2025-01-14},
   year         = {2025}
+}
+@misc{cc-cad-models,
+  author       = {Nicolas Arteaga García},
+  title        = {Cotton Candy Automata CAD Models},
+  year         = {2025},
+  url          = {https://cad.onshape.com/documents/b483cd392e60f3b04bd39374/w/5b655791686f3fde0bacbde9/e/c6715091ad89bd5b426d9d4b},
+  note         = {Accessed: 2024-06-15}
+}
+@misc{mangler2022cloudprocessexecutionengine,
+      title={Cloud Process Execution Engine: Architecture and Interfaces}, 
+      author={Juergen Mangler and Stefanie Rinderle-Ma},
+      year={2022},
+      eprint={2208.12214},
+      archivePrefix={arXiv},
+      primaryClass={cs.OH},
+      url={https://arxiv.org/abs/2208.12214}, 
 }
